# backend-projects

./: Cargo.toml  tasks.json
github-user-activity/: Cargo.toml  README.md
github-user-activity/src/: api.rs  cli.rs  fancy_display.rs  fancy_image.rs  main.rs  user.rs
src/: main.rs
task-tracker-api/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
task-tracker-api/src/: app.module.ts  main.ts
task-tracker-api/src/application/auth/: auth.guard.ts  auth.module.ts  auth.service.ts
task-tracker-api/src/application/auth/use-cases/: sign-in.use-case.ts  sign-up.use-case.ts
task-tracker-api/src/application/services/: app.service.ts  auth.service.ts  task.service.ts
task-tracker-api/src/application/task/: task.module.ts  task.service.ts
task-tracker-api/src/application/user/: user.module.ts  user.service.ts
task-tracker-api/src/config/db/: config.ts  db.config.ts
task-tracker-api/src/config/swagger/: config.ts
task-tracker-api/src/domain/entities/: task.entity.ts  user.entity.ts
task-tracker-api/src/domain/repositories/: app.repository.ts  auth.repository.ts  task.repository.ts
task-tracker-api/src/presentation/controllers/: app.controller.ts  auth.controller.ts  task.controller.ts  user.controller.ts
task-tracker-api/src/presentation/dtos/: auth.dto.ts  task.dto.ts  user.dto.ts
task-tracker-api/src/shared/helpers/: error.ts  openapi.ts  password.ts  response.ts
task-tracker-api/src/shared/pipes/: validation.pipe.ts
todo-cli/: Cargo.toml  README.md  tasks.json
todo-cli/src/: main.rs
(+13 files in other folders)
