[package]
name = "github-user-activity"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = "0.12.8"
serde = { version = "1.0.208", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.125"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
