[package]
name = "kh-ghfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
image = "0.24"
reqwest = {version = "0.12.8", features = ["blocking"]}
serde = { version = "1.0.208", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.125"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
openssl = { version = "0.10", features = ["vendored"] }